@@ -14,81 +14,7 @@
 ?>
 <?php echo "<?php\n"; ?>
 
-class <?php echo $modelClass; ?> extends <?php echo $this->baseClass."\n"; ?>
+class <?php echo $modelClass; ?> extends <?php echo $modelClass."Base\n"; ?>
 {
-	public static function model($className=__CLASS__)
-	{
-		return parent::model($className);
-	}
-
-	public function tableName()
-	{
-		return '<?php echo $tableName; ?>';
-	}
-
-	public function rules()
-	{
-		return array(
-<?php
-		foreach($rules as $rule) {
-			echo "\t\t\t$rule,\n";
-		}
-?>
-			array('<?php echo implode(', ', array_keys($columns)); ?>', 'safe', 'on'=>'search'),
-		);
-	}
-
-	public function relations()
-	{
-		return array(
-<?php
-		foreach($relations as $name=>$relation) {
-			echo "\t\t\t'$name' => $relation,\n";
-		}
-?>
-		);
-	}
-
-	public function behaviors()
-	{
-		return array(
-			'CSaveRelationsBehavior' => array(
-				'class' => 'ext.CSaveRelationsBehavior'
-			)
-		);
-	}
-
-	public function attributeLabels()
-	{
-		return array(
-<?php
-		foreach($labels as $name=>$label) {
-			echo "\t\t\t'$name' => Yii::t('app', '$label'),\n";
-		}
-?>
-		);
-	}
-
-	public function search()
-	{
-		$criteria=new CDbCriteria;
-
-<?php
-		foreach($columns as $name=>$column)
-		{
-			if($column->type==='string' and !$column->isForeignKey)
-			{
-				echo "\t\t\$criteria->compare('$name', \$this->$name, true);\n";
-			}
-			else
-			{
-				echo "\t\t\$criteria->compare('$name', \$this->$name);\n";
-			}
-		}
-		echo "\n";
-?>
-		return new CActiveDataProvider(get_class($this), array(
-			'criteria'=>$criteria,
-		));
-	}
+	// Add your model-specific stuff here. This file will not be overriden by gtc except you force it.
 }
