@@ -35,7 +35,9 @@ $('.form .row.model-class').toggle($('#ModelCode_tableName').val().substring($('
 
 <p>This generator generates an even more enhanced model class for the specified database table. It will include the CSaveRelationsBehavior to add additional functions for MANY_MANY relations </p>
 
-<?php $form=$this->beginWidget('CCodeForm', array('model'=>$model)); ?>
+<?php 
+$model->baseClass = 'GtcActiveRecord';
+$form=$this->beginWidget('CCodeForm', array('model'=>$model)); ?>
 
 	<div class="row sticky">
 		<?php echo $form->labelEx($model,'tablePrefix'); ?>
