@@ -323,11 +323,11 @@ class Relation extends CWidget
 
 				if($this->groupParentsBy != '') 
 				{
-					$dataArray[$obj->{$this->groupParentsBy}][$obj->{$this->relatedPk}] = $value;
+					$dataArray[$obj->{$this->groupParentsBy}][$obj->{$this->relatedPk}] = CHtml::encode($value);
 				}
 				else 
 				{
-					$dataArray[$obj->{$this->relatedPk}] = $value;
+					$dataArray[$obj->{$this->relatedPk}] = CHtml::encode($value);
 				}	
 			}
 
@@ -385,13 +385,11 @@ class Relation extends CWidget
 		public function	getObjectValues($objects)
 		{
 			if(is_array($objects)) { 
-				foreach($objects as $object) 
-				{
+				foreach($objects as $object) {
 					$attributeValues[$object->primaryKey] = $object->{$this->fields};
 				}
 			}
-			else if(is_object($objects)) 
-			{
+			else if(is_object($objects)) {
 				$attributeValues[$object->primaryKey] = $objects->{$this->fields};
 			}
 
@@ -403,15 +401,12 @@ class Relation extends CWidget
 		 */
 		public function getListBoxName($ajax = false) 
 		{
-			if($ajax) 
-			{
+			if($ajax) {
 				return	sprintf('%s_%s',
 						get_class($this->_model),
 						get_class($this->_relatedModel)
 						);  
-			}
-			else 
-			{
+			} else {
 				return	sprintf('%s[%s]',
 						get_class($this->_model),
 						get_class($this->_relatedModel)
@@ -458,19 +453,25 @@ class Relation extends CWidget
 		 * The users can add additional entries with the + and remove entries
 		 * with the - Button .
 		 */
-		public function renderManyManyDropDownListSelection()
-		{
+		public function renderManyManyDropDownListSelection() {
+
+			$addbutton = sprintf('i = 1; maxi = %d;', count($relatedmodels = $this->_relatedModel->findAll()));
+			Yii::app()->clientScript->registerScript('addbutton', $addbutton); 
+
 			$i = 0;
-			foreach($this->_relatedModel->findAll() as $obj)
-			{ 
+			$uniqueid = $this->_relatedModel->tableSchema->name;
+			foreach($relatedmodels as $obj) { 
 				$i++;
 				$isAssigned = $this->isAssigned($obj->id);
 
 				echo CHtml::openTag('div', array(
-							'id' => 'div' . $i,
+							'id' => sprintf('div_%s_%d', $uniqueid, $i),
 							'style' => $isAssigned ? '' : 'display:none;',
 							));
-				echo CHtml::dropDownList('rel-' . $obj->id . "-" . $this->getListBoxName(),
+				echo CHtml::dropDownList(sprintf('rel_%s_%d_%s',
+							$uniqueid,
+							$obj->id,
+							$this->getListBoxName()),
 						$isAssigned ? $obj->id : 0,
 						CHtml::listData(
 							array_merge(
@@ -480,32 +481,30 @@ class Relation extends CWidget
 							$this->fields
 							)
 						);
+				echo CHtml::button('-', array('id' => sprintf('sub_%s_%d', $uniqueid, $i)));
 				echo CHtml::closeTag('div');
+				$jsadd = '
+					$(\'#add_'.$uniqueid.'_'.$i.'\').click(function() {
+							$(\'#div_'.$uniqueid.'_\' + i).show();
+							if(i <= maxi) i++;
+							});
+				';
+
+				$jssub = '
+					$(\'#sub_'.$uniqueid.'_'.$i.'\').click(function() {
+							$(\'#div_'.$uniqueid.'_'.$i.'\').hide();
+							$("select[name=\'rel_'.$uniqueid.'_'.$obj->id.'_'.$this->getListBoxName().'\']").val(\'\');
+							if(i >= 1) i--;
+							});
+				';
+
+				Yii::app()->clientScript->registerScript('addbutton_'.$i, $jsadd); 
+				Yii::app()->clientScript->registerScript('subbutton_'.$i, $jssub); 
 			}
-
-			$jsadd = '
-				i = 1;
-			maxi = '.$i.';
-			$(\'#add\').click(function() {
-					$(\'#div\' + i).show();
-					if(i <= maxi) ++i;
-					});
-			';
-
-			$jssub = '
-				$(\'#sub\').click(function() {
-						if(i > 2) --i;
-						$(\'#div\' + i).hide();
-						});
-			';
-
-			Yii::app()->clientScript->registerScript('addbutton', $jsadd); 
-			Yii::app()->clientScript->registerScript('subbutton', $jssub); 
-
-			echo CHtml::button('+', array('id' => 'add'));
 			echo '&nbsp;';
-			echo CHtml::button('-', array('id' => 'sub'));
-			echo '&nbsp;';
+			echo CHtml::button('+', array('id' => sprintf('add_%s_%d', $uniqueid, 1)));
+
+
 		}
 
 		public function isAssigned($id) 
@@ -517,10 +516,8 @@ class Relation extends CWidget
 		{
 			$returnArray = array();
 
-			foreach($data as $key => $value) 
-			{
-				if(strpos($key, 'rel') !== false)
-				{
+			foreach($data as $key => $value) {
+				if(strpos($key, 'rel') !== false) {
 					if(isset($value[$field]))
 						$returnArray[] = $value[$field];
 				}
